fixed bottom nav

--- a/src/assets/styles/cmps/stay-preview.scss
+++ b/src/assets/styles/cmps/stay-preview.scss
@@ -9,9 +9,7 @@
         color: black;
         background-color: rgba(255, 255, 255, 0.95);
         opacity: 85%;
-        display: none;
     }
-
     .swiper-button-prev {
         border: 0.5px solid rgba(0, 0, 0, 0.3);
         border-radius: 30px;
@@ -20,19 +18,12 @@
         color: black;
         background-color: rgba(255, 255, 255, 0.95);
         opacity: 85%;
-        display: none;
-
     }
-
     .main-img {
         cursor: pointer;
         border-radius: 10px;
         aspect-ratio: 1/1;
     }
-
-  
-
-
     .preview-like-btn {
         stroke: #fff !important;
         stroke-width: 1 !important;
@@ -40,8 +31,8 @@
         color: #ff385c;
         position: absolute;
         z-index: 1000;
-        right: 1%;
-        top: 1%;
+        right: 5%;
+        top: 5%;
         display: none;
     }
 
@@ -51,8 +42,8 @@
         border: none;
         position: absolute;
         z-index: 1;
-        right: 1%;
-        top: 1%;
+        right: 5%;
+        top: 5%;
         display: block;
         fill: rgba(0, 0, 0, 0.5);
     }
@@ -77,6 +68,7 @@
     .preview-subtitle {
         color: #717171;
         font-size: 0.9rem;
+        letter-spacing: 0.3px;
     }
 
     .preview-price {
