--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -11,10 +11,14 @@ img {
     z-index: -1;
 }
 .overlay{
+    display: none;
     position: absolute;
     z-index: -1;
-    width: 99vw;
-    height: 100vh;
+    width: 100%;
+    height: 200vh;
+}
+.bottom-nav{
+    display: none;
 }
 
 .loader {
