--- a/src/assets/styles/cmps/footer.scss
+++ b/src/assets/styles/cmps/footer.scss
@@ -22,6 +22,10 @@
           display: flex;
           align-items: center;
           margin: 0 0.9rem;
+          a{
+            text-decoration: none;
+            color: black;
+          }
           p{
             margin-inline-start: 0.4rem;
           }
