--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -34,6 +34,7 @@
 @import './cmps/wishlist-modal.scss';
 @import './cmps/reservation-confirmation.scss';
 @import './cmps/reviews.scss';
+@import './cmps/guests.scss';
 
 // Media Query
 @import './mq/tablet.scss';
