--- a/src/assets/styles/cmps/wishlist-modal.scss
+++ b/src/assets/styles/cmps/wishlist-modal.scss
@@ -33,7 +33,7 @@ span{
     flex-direction: column;
     padding: 23px;
     margin-top: 20px;
-    gap: 40px;
+    // gap: 40px;
     .section-one{
         font-family: 'cereal-medium';
         font-size: 1rem;
