--- a/src/assets/styles/cmps/app-header.scss
+++ b/src/assets/styles/cmps/app-header.scss
@@ -33,6 +33,8 @@
       height: min-content;
       justify-content: space-around;
       width: 350px;
+      margin: -5px;
+
       cursor: pointer;
       >* {
         border: 0;
