fixed trips bug and img

--- a/src/assets/styles/mq/mobile.scss
+++ b/src/assets/styles/mq/mobile.scss
@@ -17,8 +17,7 @@
             .filter-main{
                 padding-block-start: 0;
                 margin-block-end: 0.7rem;
-            
-                .filters-btn{display: none;}
+                // .filters-btn{display: none;}
                 .carusel-filter-main{
                     display: flex;
                     min-width: 71rem;
