--- a/src/assets/styles/cmps/carusel.scss
+++ b/src/assets/styles/cmps/carusel.scss
@@ -28,9 +28,7 @@
 
 .carusel-filter-main {
     display: inline-block;
-    width: 93rem;
-    min-width: 93rem;
-    // display: flex;
+    min-width: 100%;
     align-items: center;
     .swiper-button-next {
         border: 0.5px solid rgba(0, 0, 0, 0.3);
