fixed header and order

--- a/src/assets/styles/cmps/app-header.scss
+++ b/src/assets/styles/cmps/app-header.scss
@@ -49,20 +49,19 @@
         }
 
       }
-
+      
+      .left{
+        div {padding: 0 15px 0 15px;}
+      }
+      .middle{
+        div{padding: 0 15px 0 5px}
+      }
       .right {
         display: flex;
         align-items: center;
         color: $clr-grey;
         font-size: 0.9rem;
-      }
-
-      .left,
-      .middle,
-      .right {
-        div {
-          padding: 0 15px 0 15px;
-        }
+        div{padding: 0 15px 0 5px;} 
       }
     }
 
