--- a/src/assets/styles/cmps/guests.scss
+++ b/src/assets/styles/cmps/guests.scss
@@ -1,5 +1,5 @@
-.guests-section {
-  width: 350px;
+.guests-modal {
+  width: 330px;
   position: absolute;
   background-color: white;
   z-index: 9;
