--- a/src/assets/styles/views/stay-details.scss
+++ b/src/assets/styles/views/stay-details.scss
@@ -1,7 +1,7 @@
 .deatils-header {
     h1{
-        font-size: 1.7rem;
-        font-weight: 600;
+        font-size: 1.5rem;
+        font-weight: 700;
         margin-block-end: 0.5rem;
     }
     .deatils-sub-header {
@@ -10,14 +10,11 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        .rating{
-            font-family: 'cereal-medium';
-        }
         .subheader-title{
             display: flex;
             align-items: center;
-            p{
-                margin: 0 0.1rem;
+            span{
+                font-weight: 700;
             }
         }
         .subheader-btns {
