--- a/src/assets/styles/views/host-dashboard.scss
+++ b/src/assets/styles/views/host-dashboard.scss
@@ -127,12 +127,19 @@ text-align: right;
   
   .selected-status{
     margin-right: -25px;
-    color: $clr-pink;
+    color: $clr-black;
     background-color: transparent;
     border: 1px solid $clr-grey;
     border-radius: 10px;
     width: 85px;
     height: 40px;
     box-shadow: 0px -1px 10px -5px rgb(0 0 0 / 32%);
-
+    &.approved{
+      color: green;
+      border-color: green;
+    }
+    &.reject{
+      color: $clr-pink;
+      border-color: $clr-pink;
+    }
   }
