--- a/src/assets/styles/mq/mobile.scss
+++ b/src/assets/styles/mq/mobile.scss
@@ -13,28 +13,54 @@
         }
     }
     .main-layout{
+        padding: 0 10px 0 10px;
         .home-page{
             .filter-main{
+                height: 90px;
                 padding-block-start: 0;
                 margin-block-end: 0.7rem;
-                // .filters-btn{display: none;}
                 .carusel-filter-main{
-                    display: flex;
-                    min-width: 71rem;
+                    display: none;
                     margin-right: -3.62rem;
-                    height: 3.688rem;
                     box-shadow: 1px 1px 6px -2px rgb(160 160 160 / 55%);
                     position: absolute;
-
-                    ;
                     .swiper-button-next{display: none;}
                 }
             }
             .stay-list{
+                grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
                 .stay-preview{
                     .swiper-button-next,
                     .swiper-button-prev{
                         display: none;
+                    }
+                }
+            }
+        }
+        .stay-details{
+            margin-block-start: 2rem;
+            .deatils-header .deatils-sub-header{
+                flex-wrap: wrap;
+            }
+            .details-container{
+                flex-direction: column;
+                .left{
+                    .host-details{
+                        .main-details{
+                            .main-details-text{
+                                h2{font-size: 1.2rem;}
+                            }
+                        }
+                    }
+                }
+                .right{
+                    margin-inline-start: 0;
+                    margin-block-start: 1rem;
+                    .order-section .date-picker .rdrDateRangePickerWrapper{
+                        right: 5%;
+                    }
+                    .rdrMonths{
+                        flex-direction: column;
                     }
                 }
             }
