--- a/src/assets/styles/mq/tablet.scss
+++ b/src/assets/styles/mq/tablet.scss
@@ -23,5 +23,22 @@
                 margin-block-start: 0.2rem;
             }
         }
+        .expended-search{
+            .bar{
+                width: 650px;
+            }
+        }
+        .locations-modal{
+            left: 12%;
+            width: 400px;
+            .locations-modal-map{
+                div p{
+                    font-size: 0.8rem;
+                }
+                img{
+                    height: 100px;
+                }
+            }
+        }
     }
 }
