--- a/src/assets/styles/mq/mobile.scss
+++ b/src/assets/styles/mq/mobile.scss
@@ -16,11 +16,11 @@
         padding: 0 20px;
         .home-page{
             .filter-main{
+                display: none;
                 height: 90px;
                 padding-block-start: 0;
                 margin-block-end: 0.7rem;
                 .carusel-filter-main{
-                    display: none;
                     margin-right: -3.62rem;
                     box-shadow: 1px 1px 6px -2px rgb(160 160 160 / 55%);
                     position: absolute;
@@ -28,6 +28,7 @@
                 }
             }
             .stay-list{
+                margin-block-start: 1rem;
                 grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
                 .stay-preview{
                     .swiper-button-next,
@@ -54,10 +55,26 @@
                             }
                         }
                     }
+                    .stay-amenities{
+                        ul{
+                            li{
+                                font-size: 0.8rem;
+                            }
+                        }
+                        .show-all{
+                            font-size: 14px;
+                            padding: 9px 20px;
+                        }
+                    }
                 }
                 .right{
                     margin-inline-start: 0;
                     margin-block-start: 1rem;
+                    .order-section{
+                        .order-container{
+                            width: 100%;
+                        }
+                    }
                     .order-section .date-picker .rdrDateRangePickerWrapper{
                         right: 5%;
                     }
@@ -98,6 +115,19 @@
         h1{
             margin-bottom: 0;
             margin: 30px 0;
+        }
+        .trips-grid-container{
+            li{
+                img{
+                    width: 150px;
+                    height: 150px;
+                }
+                .trip-text-container{
+                    .upper-section{
+                        p{font-size: 0.9rem;}
+                    }
+                }
+            }
         }
     }
     .bottom-nav{
