--- a/src/assets/styles/views/trips.scss
+++ b/src/assets/styles/views/trips.scss
@@ -40,14 +40,14 @@
   }
 
   ul {
-    margin-bottom: 30px;
+    margin-block-end: 30px;
   }
 
   h3 {
-    margin-bottom: 30px;
+    margin-block-end: 30px;
   }
 
   h4 {
-    margin-bottom: 5px;
+    margin-block-end: 5px;
   }
 }
