--- a/src/assets/styles/cmps/order-section.scss
+++ b/src/assets/styles/cmps/order-section.scss
@@ -109,7 +109,7 @@
         .date-input {
             display: flex;
             flex-direction: column;
-            gap: 5px;
+            gap: 5px; 
             padding: 7px 12px;
             color: gray;
             font-size: 0.75rem;
@@ -129,6 +129,7 @@
         padding: 7px 12px;
         color: $clr-black;
         font-size: 0.75rem;
+        display: none;
         cursor: pointer;
 
         svg {
