fixed header user nav and logout

--- a/src/assets/styles/cmps/user-nav.scss
+++ b/src/assets/styles/cmps/user-nav.scss
@@ -1,7 +1,7 @@
 .user-nav{
-    position: fixed;
-    top: 77px;
-    right: 150px;
+    position: relative;
+    right: -84%;
+    top: 5px;
     box-shadow: $boxShadow;
     width: 240px;
     background-color: white;
