--- a/src/assets/styles/cmps/details-nav-bar.scss
+++ b/src/assets/styles/cmps/details-nav-bar.scss
@@ -1,8 +1,12 @@
 .details-nav-bar {
   position: fixed;
+  display: flex;
   width: 100%;
   height: 70px;
   top: 0;
+  padding: 0 40px 0 0;
+  justify-content: center;
+  align-items: center;
   background-color: white;
   z-index: 10;
 
@@ -10,17 +14,51 @@
     display: flex;
     gap: 20px;
     font-weight: 700;
+    width: 100%;
+    justify-content: space-between;
 
-    &>* {
-      text-decoration: none;
-      padding: 30px 0;
-      color: $clr-black;
-      border-bottom: solid transparent 4px;
-      transition: all 0.2s;
+    .details-nav-bar-links {
+      display: flex;
+      gap: 20px;
+      font-weight: 700;
+
+      &>* {
+        text-decoration: none;
+        padding: 30px 0;
+        color: $clr-black;
+        border-bottom: solid transparent 4px;
+        transition: all 0.2s;
+      }
+
+      &>*:hover {
+        box-shadow: inset 0 -4px 1px -1px $clr-black;
+      }
     }
 
-    &>*:hover {
-      box-shadow: inset 0 -4px 1px -1px $clr-black;
+    .scroll-bar-reserve-btn-container {
+      position: relative;
+      width: 109px;
+      height: 48px;
+      align-self: center;
+
+      button {
+        width: 100%;
+      }
     }
+
+    .dynamicReserveContainer {
+      display: flex;
+      padding: 0;
+      justify-content: center;
+      align-items: center;
+      gap: 15px;
+
+      .dynamicReserveDetails {
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+      }
+    }
+
   }
 }
