--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -35,6 +35,7 @@
 @import './cmps/reservation-confirmation.scss';
 @import './cmps/reviews.scss';
 @import './cmps/guests.scss';
+@import './cmps/project-about.scss';
 
 // Media Query
 @import './mq/tablet.scss';
