--- a/src/assets/styles/mq/tablet.scss
+++ b/src/assets/styles/mq/tablet.scss
@@ -18,6 +18,9 @@
             }
             .search-container{
                 margin-right: auto;
+                .right{
+                    font-size: 0.8rem;
+                }
             }
             .header-user{
                 margin-block-start: 0.2rem;
